...
                android:paddingBottom="8dp"
                android:textColor="@color/gutter_text"
                android:textSize="14sp"
                android:typeface="monospace" />

            <com.secretarrow.rockedit.ui.EditorView
                android:id="@+id/editor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="monospace"
                android:gravity="top|start"
...
